[package]
name = "ev_charger_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
aes = "0.7"
base64 = "0.13"
hmac = "0.12"
digest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
btleplug = { version = "0.11.6" } # Use default feature set
